# glare

./: .gitignore  .gitreview  .stestr.conf  .testr.conf  .zuul.yaml  README.md  README.rst  bandit.yaml  requirements.txt  setup.cfg  test-requirements.txt  tox.ini
devstack/: README.rst  plugin.sh  settings
doc/source/: architecture.rst  conf.py  index.rst  main_features.rst  overview.rst  quickstart.rst
doc/source/_templates/: sidebarlinks.html
doc/source/_theme/: layout.css
doc/source/developer/: creating_custom_artifact_type.rst  devstack.rst  index.rst  troubleshooting.rst
doc/source/guides/: configuration_guide.rst  dashboard_guide.rst  glareclient_guide.rst  hooks_guide.rst  installation_guide.rst  upgrade_guide.rst
doc/source/images_src/: glare-architecture.graphml
etc/: glare-paste.ini  glare-swift.conf.sample
etc/oslo-config-generator/: glare.conf
glare/: __init__.py  context.py  engine.py  i18n.py  locking.py  notification.py  opts.py  quota.py  scrubber.py  version.py  wsgi.py
glare/api/: versions.py
glare/api/middleware/: context.py  fault.py  glare_context.py  keycloak_auth.py  version_negotiation.py
glare/api/v1/: api_version_request.py  api_versioning.py  resource.py  router.py
glare/cmd/: __init__.py  api.py  db_manage.py  scrubber.py
glare/common/: config.py  exception.py  policy.py  semver_db.py  store_api.py  utils.py  wsgi.py  wsme_utils.py
glare/db/: api.py  artifact_api.py  simple_api.py
glare/db/migration/: alembic.ini  migration.py
glare/db/sqlalchemy/: api.py  models.py
glare/hacking/: checks.py
glare/objects/: all.py  attribute.py  base.py  fields.py  heat_environment.py  heat_template.py  image.py  murano_package.py  registry.py  secret.py  tosca_template.py  validators.py
glare/objects/meta/: __init__.py  attribute.py  fields.py  file_utils.py  registry.py  validators.py  wrappers.py
glare/store/: base_api.py  database.py
glare/tests/: hooks_artifact.py  non_nullable_fields_artifact.py  sample_artifact.py  unpacking_artifact.py  utils.py
glare/tests/etc/: policy.json
glare/tests/functional/: __init__.py  base.py  sample_artifact.py  test_all.py  test_artifacts.py  test_database_store.py  test_quotas.py  test_sample_artifact.py  test_schemas.py  test_scrubber.py  test_visibility.py
glare/tests/unit/: __init__.py  base.py  glare_fixtures.py  simple_db_api.py  test_artifact_api.py  test_fixtures.py  test_hacking.py  test_multistore.py  test_policies.py  test_quotas.py  test_store_api.py  test_unpacking.py  test_utils.py  test_validation_hooks.py  test_validators.py  test_versions.py  test_wsgi.py
glare/tests/var/: certificate.crt
glare_tempest_plugin/: README.rst  clients.py  config.py  plugin.py
glare_tempest_plugin/contrib/: gate_hook.sh  post_test_hook.sh  pre_test_hook.sh  tempest.conf
glare_tempest_plugin/services/artifacts/: artifacts_client.py
glare_tempest_plugin/tests/api/: base.py  test_blobs.py  test_list_artifact.py
playbooks/glare-devstack/: run.yaml
tools/: artifact_type_generator.py
(+26 files in other folders)
