[metadata]
name = glare
summary = OpenStack Artifact Service
description-file = README.rst
author = OpenStack
author-email = openstack-dev@lists.openstack.org
home-page = http://docs.openstack.org/developer/glare/
classifier =
    Environment :: OpenStack
    Intended Audience :: Information Technology
    Intended Audience :: System Administrators
    License :: OSI Approved :: Apache Software License
    Operating System :: POSIX :: Linux
    Programming Language :: Python
    Programming Language :: Python :: 2
    Programming Language :: Python :: 2.7
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.5

[files]
packages =
    glare
    glare_tempest_plugin

data_files =
    etc/glare =
        etc/glare-paste.ini
        etc/glare-swift.conf.sample

[entry_points]
console_scripts =
    glare-api = glare.cmd.api:main
    glare-db-manage = glare.cmd.db_manage:main
    glare-scrubber = glare.cmd.scrubber:main
oslo.config.opts =
    glare = glare.opts:list_artifacts_opts
oslo.policy.enforcer =
    glare = glare.common.policy:_get_enforcer
oslo.policy.policies =
    glare = glare.common.policy:list_rules
tempest.test_plugins =
    glare_tempest_tests = glare_tempest_plugin.plugin:GlareTempestPlugin

[build_sphinx]
all_files = 1
build-dir = doc/build
source-dir = doc/source

[egg_info]
tag_build =
tag_date = 0
tag_svn_revision = 0

[compile_catalog]
directory = glare/locale
domain = glare

[update_catalog]
domain = glare
output_dir = glare/locale
input_file = glare/locale/glare.pot

[extract_messages]
keywords = _ gettext ngettext l_ lazy_gettext
mapping_file = babel.cfg
output_file = glare/locale/glare.pot

[pbr]
autodoc_tree_index_modules = True
